# wechat-dev

./: .gitignore  README.md  hello.py  pyproject.toml
config/: templates.json
docs/: 微信接龙机器人技术文档.md  微信接龙机器人技术方案.md
scripts/: config_cli.py  run_bot.py
src/wechat_bot/: main.py
src/wechat_bot/cli/: commands.py
src/wechat_bot/core/: bot.py  personal_bot.py  scheduler.py
src/wechat_bot/managers/: config_manager.py  template_manager.py
tests/: test_bot.py
